# Agent-based-Data-Acquisition-Pipeline

./: .gitignore  config.py  demo_pipeline.py  docker-compose.yml  figure3_processing_times.csv  main.py  orchestrator.py  pyproject.toml  run_workers.py  table2_queue_data.csv  visualization.ipynb  workers.py
agents/base/: __init__.py  base_agent.py
agents/ingestion_agent/: Dockerfile  ingestion_agent.py  main.py
agents/orchestrator/: Dockerfile  dashboard.py  main.py  orchestrator.py  requirements.txt
agents/processing_agent/: Dockerfile  main.py  privacy_enhanced.py  processing_agent.py  requirements.txt
agents/storage_agent/: Dockerfile  main.py  storage.py
data/: orchestrator.db
database/: schema.sql
openapi/: processing.yaml
schemas/: message_schemas.json
seminar/: pyvenv.cfg
seminar/Scripts/: activate  activate.bat
specs/: ingestion.yaml
test/: check_agents.py  quick_test_phase4.py  test.py  test_camera.py  test_dashboard.py  test_hello_world.py  test_integration.py  test_phase3.py  test_real_time.py  test_stress_phase4.py  test_video.py  vertify.py
