[project]
name = "seminar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "aiohttp==3.9.0",

    # backend infra
    "redis==5.0.1",
    "celery==5.3.4",
    "kafka-python==2.0.2",
    "psycopg2-binary==2.9.9",
    "minio==7.2.0",
    "prometheus-client==0.19.0",

    # testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
]
